<resources>
    <string name="app_name">Timer</string>
    <string name="time_default">00</string>
    <string name="colon">:</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="minute_text">Minutes</string>
    <string name="second_text">Seconds</string>
    <string name="times_up">Time\'s Up!</string>
    <string name="return_button">Return</string>

</resources>